examples/openshift/service-hello-world.yaml
kind: Service
apiVersion: v1
metadata:
  name: hello-world-service
  labels:
    name: hello
spec:
  selector:
    name: hello
  ports:
  - protocol: TCP
    port: 9000
    targetPort: 8080
